--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,11 +1,11 @@
 <div class="quizz__container">
   <div class="quizz_logo">
     <img src="assets/imgs/logo.png" alt="" srcset="">
-    <h3>Título</h3>
+    <h3>{{ title }}</h3>
   </div>
 
   <div class="quizz_questions">
-    <h3>questão selecionada</h3>
+    <h3>{{ questionSelected.question }}</h3>
   </div>
 
   <div class="quizz_options">
@@ -14,7 +14,7 @@
     </button>
   </div>
 
-  <div class="quizz_results">
+  <div *ngIf=finished quizz_results>
     <h1>O seu resultado é:</h1>
     <p>Resposta Selecionada</p>
   </div>
